去除template-srvice认证
